Tue Oct 09 01:32:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/searcher.py: Tidy up headings.

Tue Oct 09 01:21:38 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/: Sort out search side of performance tests.

Mon Oct 08 23:46:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/: Tidy up, towards making automated performance tests
	  runnable just by running a single script.  Fix graph drawing for
	  cases where there are few sample points.

Mon Oct 08 14:22:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Add second name for Bruno Rezende.

Sun Oct 07 01:56:47 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Change from using OP_MULT_WEIGHT to
	  use OP_SCALE_WEIGHT, to work with latest version of xapian.

Sat Oct 06 01:55:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* MANIFEST.in,eggsetup.py,setup.py: Basic start of distutils
	  packaging.

Wed Oct 03 14:00:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* build.py: Don't include private variables in the output of epydoc;
	  this makes it more useful as an API reference.
	* docs/introduction.rst: Add a note on error handling.

Wed Oct 03 13:04:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/errors.py,xappy/errors_doctest1.txt: Export all the xapian
	  error types (eg, xapian.FooError) as xappy.XapianFooError.  Also,
	  make them all subclasses of xappy.XapianError.  This allow
	  a particular Xapian error to be caught using "except
	  xappy.XapianFooError", or all Xapian errors to be caught using
	  "except xappy.XapianError".

Wed Oct 03 12:36:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py,xappy/searchconnection_doctest3.txt: Fix from
	  Alex Bowley to coerce maxlen into an int in highlight.py

Tue Oct 02 18:31:54 BST 2007  Richard Boulton <richard@lemurconsulting.com>
