@@ -1,3 +1,8 @@
+Tue Oct 09 01:48:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* perftest/perftest.py: More tidying, ready for running big tests
+	  against wikipedia.
+
 Tue Oct 09 01:32:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* perftest/searcher.py: Tidy up headings.
